admission/validatingAdmissionPolicies/policies/powerful-roles/rolebindings/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: rolebinding-powerful-roles
  annotations:
    security.kubeapt.io/displayName: 'Powerful Roles'
    security.kubeapt.io/description: RoleBindings must not reference powerful roles such as cluster-admin/admin/edit.
    security.kubeapt.io/resource: RoleBindings
    security.kubeapt.io/severity: "10"
    security.kubeapt.io/remediation: "Change roleRef to a non-privileged role. Fields: roleRef.kind, roleRef.name."
    policies.kolteq.com/validatingAdmissionPolicy: a5d51949-a61d-5aa5-9bca-9c34da17f9aa
  labels:
    check-rolebinding-powerful-roles.security.kolteq.com/audit: 'false,true'
    check-rolebinding-powerful-roles.security.kolteq.com/enforce: 'false,true'
    check-rolebinding-powerful-roles.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - rbac.authorization.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - rolebindings
  variables:
  - name: powerfulRoles
    expression: |
      ["cluster-admin","admin","edit","ns-admin","full-access"]
  validations:
  - expression: |
      !has(object.roleRef) || !(object.roleRef.kind in ["ClusterRole","Role"] &&
        variables.powerfulRoles.exists(rn, rn == object.roleRef.name))
    message: |
      RoleBindings must not reference powerful roles such as cluster-admin/admin/edit.
